# al2o3_os

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: push_build.yml
include/al2o3_os/: atomics.h  file.h  file.hpp  filesystem.h  filesystem.hpp  monitordesc.h  rect.h  rect.hpp  thread.h  thread.hpp  time.h
src/: file.c  filesystem.cpp
src/apple/: filesystem.mm  time.mm
src/posix/: filesystem.cpp  thread.c
src/windows/: filesystem.cpp  thread.c  time.c
tests/: test_file.cpp  test_filesystem.cpp  test_os.cpp  test_thread.cpp
